[gd_scene load_steps=8 format=3 uid="uid://c4ixbxk43au8o"]

[ext_resource type="Script" path="res://Scenes/QuestionView/QuestionView.gd" id="1_5fwhg"]
[ext_resource type="Texture2D" uid="uid://bswswwr385npt" path="res://Assets/Images/arrow.png" id="2_3rmh1"]
[ext_resource type="PackedScene" uid="uid://c24yxlhy3uu0q" path="res://Scenes/PauseMenu/PauseMenu.tscn" id="2_hxox5"]
[ext_resource type="Texture2D" uid="uid://bvl7bmt8oq6oe" path="res://Assets/Images/arrow-hover.png" id="3_jsa6f"]

[sub_resource type="Animation" id="Animation_da7xe"]
resource_name = "open_sidepanel"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.4, 1),
"update": 0,
"values": [Vector2(-200, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../TextureRect:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [0.0, 3.14159]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../TextureRect:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.4, 1),
"update": 0,
"values": [Vector2(5, 5), Vector2(205, 5)]
}

[sub_resource type="Animation" id="Animation_5bk4h"]
resource_name = "close_sidepanel"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.4, 0.4),
"update": 0,
"values": [Vector2(0, 0), Vector2(-200, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../TextureRect:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [3.14159, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../TextureRect:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.4, 0.4),
"update": 0,
"values": [Vector2(205, 5), Vector2(5, 5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n0mnv"]
_data = {
"close_sidepanel": SubResource("Animation_5bk4h"),
"open_sidepanel": SubResource("Animation_da7xe")
}

[node name="QuestionView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5fwhg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuestionContainer" type="BoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/QuestionContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Nothing is loaded, yell at Ben to load a question or something"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="AnswerContainer" type="BoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SidepanelContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2

[node name="Sidepanel" type="PanelContainer" parent="SidepanelContainer"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 200.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SidepanelContainer/Sidepanel"]
layout_mode = 2

[node name="Label" type="Label" parent="SidepanelContainer/Sidepanel/VBoxContainer"]
layout_mode = 2
text = "Your Answers"
horizontal_alignment = 1

[node name="AnswerList" type="VBoxContainer" parent="SidepanelContainer/Sidepanel/VBoxContainer"]
layout_mode = 2

[node name="SidepanelAnimations" type="AnimationPlayer" parent="SidepanelContainer/Sidepanel"]
libraries = {
"": SubResource("AnimationLibrary_n0mnv")
}

[node name="TextureRect" type="TextureButton" parent="SidepanelContainer"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 29.0
offset_bottom = 29.0
rotation = 3.14159
pivot_offset = Vector2(12, 12)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_3rmh1")
texture_hover = ExtResource("3_jsa6f")
ignore_texture_size = true
stretch_mode = 0

[node name="PauseMenu" parent="." instance=ExtResource("2_hxox5")]
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 1

[connection signal="pressed" from="SidepanelContainer/TextureRect" to="." method="_on_texture_rect_pressed"]
